@@ -27,8 +27,17 @@ public class BasicBinaryContentService implements BinaryContentService {
      */
     @Override
     public BinaryContent create(BinaryContentCreateRequestDTO createRequestDTO) {
+        String fileName = createRequestDTO.fileName();
+        byte[] content = createRequestDTO.content();
+        String contentType = createRequestDTO.contentType();
+
         // BinaryContent 생성
-        BinaryContent binaryContent = new BinaryContent(createRequestDTO.content());
+        BinaryContent binaryContent = BinaryContent.builder()
+                .fileName(fileName)
+                .size((long) content.length)
+                .contentType(contentType)
+                .content(content)
+                .build();
 
         // 데이터 저장
         binaryContentRepository.save(binaryContent);
@@ -38,14 +47,15 @@ public class BasicBinaryContentService implements BinaryContentService {
     /**
      * 주어진 ID 목록에 해당하는 BinaryContent 전체 조회
      *
-     * @param idSet 조회할 BinaryContent ID 목록
+     * @param ids 조회할 BinaryContent ID 목록
      * @return 조회된 BinaryContent 리스트
      */
     @Override
-    public List<BinaryContent> findAllByIdIn(Set<UUID> idSet) {
-        return binaryContentRepository.findAll().stream()
-                .filter(bc -> idSet.contains(bc.getId()))
-                .collect(Collectors.toList());
+    public List<BinaryContent> findAllByIdIn(List<UUID> ids) {
+        return ids.stream()
+                .map(id -> binaryContentRepository.findById(id)
+                        .orElseThrow(() -> new NoSuchElementException("존재하지 않는 BinaryContent입니다.")))
+                .toList();
     }
 
     /**
@@ -58,7 +68,7 @@ public class BasicBinaryContentService implements BinaryContentService {
     @Override
     public BinaryContent find(UUID id) {
         return binaryContentRepository.findById(id)
-                .orElseThrow(()-> new NoSuchElementException("해당 ID의 BinaryContent가 존재하지 않습니다."));
+                .orElseThrow(()-> new NoSuchElementException("존재하지 않는 BinaryContent입니다."));
     }
 
     /**
@@ -68,7 +78,6 @@ public class BasicBinaryContentService implements BinaryContentService {
      */
     @Override
     public void delete(UUID id) {
-        // 삭제
         binaryContentRepository.deleteById(id);
     }
 }
